--- a/src/main/resources/mensagens_en.properties
+++ b/src/main/resources/mensagens_en.properties
@@ -1,112 +1,117 @@
 //Padrao=
-label.empresa=Choose the associated company
 botao.salvar=Save
 botao.cancelar=Cancel
 
-
-//index.html=
-navbar.brand=HyperReach
-navbar.home=Home
-navbar.register=Register
-table.title=Our Partner Companies
-table.name=Name
-table.size=Size
-table.sector=Sector
-table.location=Location
-table.num_employees=Number of Employees
-table.type=Type of Company
-table.client=Client
-table.actions=Actions
-button.details=Details
-button.edit=Edit
-button.remove=Remove
-
+//Empresa_model=
+empresa.nome.size=The name must be between 4 and 255 characters
+empresa.nome.notEmpty=The company name is required
+empresa.loc.notEmpty=The geographic location is required
+empresa.numFun.positive=The number of employees must be greater than or equal to zero
+empresa.numFun.notEmpty=The number of employees is required
 
 //criar_empresa.html=
-page.title=Register New Company
-form.header=Register New Company
-form.label.nome=What is the name of the company?
-form.label.tamanho=What is the size of the company?
-form.label.setor=What is the industry sector of the company?
-form.label.localizacaoGeografica=Where is the company located?
-form.label.numeroFuncionarios=How many employees does the company have?
-form.label.tipoEmpresa=What is the type of the company?
-form.label.cliente=Is this company our client?
-validation.nome.required=The company name is required and must be between 4 and 255 characters.
-validation.tamanho.required=The size of the company is required.
-validation.setor.required=The industry sector is required.
-validation.localizacaoGeografica.required=The geographical location is required.
-validation.numeroFuncionarios.required=The number of employees is required and must be a positive number.
-validation.tipoEmpresa.required=The type of the company is required.
+empresa.title=Register New Company
+empresa.nome=What is the company name?
+empresa.tamanho=What is the company's size?
+empresa.setor=What is the company's industry?
+empresa.localizacaoGeografica=Where is the company located?
+empresa.numeroFuncionarios=How many employees does the company have?
+empresa.tipoEmpresa=What is the company's type?
+empresa.cliente=Is this company our client?
 tamanho.micro=Micro
 tamanho.pequeno=Small
 tamanho.medio=Medium
 tamanho.grande=Large
 tamanho.multinacional=Multinational
-tipo.empresa.sociedade_limitada=Society Limited
-tipo.empresa.microempreendedor_individual=Individual Microentrepreneur
-tipo.empresa.sociedade_limitada_unipessoal=Single Member Limited Company
-tipo.empresa.sociedade_anonima=Publicly Held Company
-tipo.empresa.empresario_individual=Individual Entrepreneur
-tipo.empresa.sociedade_simples=Simple Society
+tipo.empresa.sociedade_limitada=Limited Liability Company
+tipo.empresa.microempreendedor_individual=Sole Proprietorship
+tipo.empresa.sociedade_limitada_unipessoal=Single-Member Limited Liability Company
+tipo.empresa.sociedade_anonima=Corporation
+tipo.empresa.empresario_individual=Sole Trader
+tipo.empresa.sociedade_simples=Simple Partnership
 setor.comercial=Commercial
 setor.industrial=Industrial
 setor.rural=Rural
 setor.servicos=Services
 setor.outros=Others
-button.save=Save
 
+//Comportamento_model=
+comportamento.interacoes.notNull=The number of interactions on the platform is required
+comportamento.interacoes.positive=The number of interactions on the platform must be greater than or equal to zero
+comportamento.frequencia.min=The frequency of use must be zero or positive
+comportamento.frequencia.max=The frequency of use must be less than or equal to 10
+comportamento.frequencia.notNull=The frequency of use is required
+comportamento.feedback.notBlank=Feedback is required
 
 //criar_comportamento.html=
-titulo.comportamento=Business Behavior
-label.interacoesPlataforma=How many interactions has the company had on the platform?
-label.frequenciaUso=What is the frequency of use of the platform? (On a scale of 1 to 10)
-label.feedback=Comments and opinions about the platform
-selecioneOpcao.label=Select an option
-usoRecursosEspecificos.label=Do you use any specific resources?
+comportamento.titulo=Business Behavior
+comportamento.interacoesPlataforma=How many interactions has the company had on the platform?
+comportamento.frequenciaUso=What is the frequency of platform use? (On a scale of 1 to 10)
+comportamento.feedback=Comments and opinions about the platform
+comportamento.usoRecursos=Do you use any specific resource?
+comportamento.selecioneOpcao=Select an option
 opcoesRecursos.sim=Yes
 opcoesRecursos.nao=No
-erroInteracoesPlataforma=The number of interactions on the platform is required.
-erroFrequenciaUso=The frequency of use is required and must be between 1 and 10.
-erroFeedback=The opinion is required and cannot be empty.
-erroUsoRecursosEspecificos=The use of specific resources is required.
 
+//Desempenho_model=
+desempenho.receita.positive=Revenue must be greater than or equal to zero
+desempenho.receita.notNull=Revenue is required
+desempenho.lucro.positive=Profit must be greater than or equal to zero
+desempenho.lucro.notNull=Profit is required
+desempenho.crescimento.min=Growth must be greater than or equal to zero
+desempenho.crescimento.max=Growth must be less than or equal to 100
+desempenho.crescimento.notNull=Growth is required
 
 //criar_desempenho.html=
-titulo.Desempenho=Financial Performance
-label.receita=What is the total revenue?
-label.lucro=What was the profit in Brazilian Reais (R$)?
-label.crescimento=What was the percentage growth?
-erro.receita=Revenue is required and must be a positive number.
-erro.lucro=Profit is required and must be a positive number.
-erro.crescimento=Growth is required and must be between 0% and 100%.
+desempenho.titulo=Financial Performance
+desempenho.receita=What is the total revenue?
+desempenho.lucro=What was the profit in reais (R$)?
+desempenho.crescimento=What was the growth percentage?
 
+//Historico_model=
+historico.proposta.notBlank=The business proposal is required
+historico.feedback.notBlank=Feedback is required
 
 //criar_historico.html=
 historico.titulo=Interaction History
 historico.proposta_negocio=What is the business proposal?
-historico.contrato_assinado=Contract Signed:
-historico.feedback_servicos_produtos=Opinion on Services and Products
+historico.contrato_assinado=Signed Contract:
 historico.selecione_opcao=Select an option
-historico.salvar=Save
-historico.cancelar=Cancel
 opcoesContrato.sim=Yes
 opcoesContrato.nao=No
-propostaNegocio.invalida=The business proposal is required
-contratoAssinado.invalido=Invalid contract option
-feedbackServicosProdutos.invalido=The opinion on services and products is required
-empresa.id.invalido=Invalid company ID
+historico.feedback_servicos_produtos=Opinion on Services and Products
 
+//Tendencia_model=
+tendencia.ano.min=The year must be greater than or equal to 1900
+tendencia.ano.max=The year must be less than or equal to 2025
+tendencia.ano.notNull=The year is required
+tendencia.gastoMarketing.positive=Marketing spending must be greater than or equal to zero
+tendencia.gastoMarketing.notNull=Marketing spending is required
+tendencia.gastoAutomacao.positive=Automation spending must be greater than or equal to zero
+tendencia.gastoAutomacao.notNull=Automation spending is required
 
 //criar_tendencia.html=
-titulo.tendencia=Spending Trend
-label.gastoMarketing=Marketing Spend:
-label.gastoAutomacao=Automation Spend:
-label.ano=Year:
-erro.ano=The year is required and must be between 1900 and 2025
-erro.gastoMarketing=Marketing spend is required and must be a positive number
-erro.gastoAutomacao=Automation spend is required and must be a positive number
+tendencia.titulo=Spending Trend
+tendencia.gastoMarketing=Marketing Spending:
+tendencia.gastoAutomacao=Automation Spending:
+tendencia.ano=Year:
 
+//index.html=
+index.title=Our Partner Companies
+index.navbar=HyperReach
+index.home=Home
+index.register=Register
+index.table.name=Name
+index.table.size=Size
+index.table.sector=Sector
+index.table.location=Location
+index.table.num_employees=Number of Employees
+index.table.type=Company Type
+index.table.client=Client
+index.table.actions=Actions
+index.details=Details
+index.edit=Edit
+index.remove=Remove
 
 //Detalhes_Empresa=
 details.title=Company Details
@@ -116,40 +121,40 @@ general_info.tamanho=Size:
 general_info.setor=Sector:
 general_info.localizacao=Location:
 general_info.num_funcionarios=Number of Employees:
-general_info.tipo_empresa=Type of Company:
+general_info.tipo_empresa=Company Type:
 general_info.cliente=Client:
 
 gastos.titulo=Spending Trends
 gasto.ano=Year 2024
 gastos.ano=Year:
-gastos.marketing=Marketing Spend:
-gastos.automacao=Automation Spend:
+gastos.marketing=Marketing Spending:
+gastos.automacao=Automation Spending:
 gastos.editar=Edit
 gastos.deletar=Delete
-gastos.criar_nova=Create Spending Trend
+gastos.criar_nova=Create New Spending Trend
 
-desempenho.titulo=Financial Performance
-desempenho.receita=Revenue:
-desempenho.lucro=Profit:
-desempenho.crescimento=Growth:
-desempenho.editar=Edit
-desempenho.deletar=Delete
-desempenho.criar_novo=Create Financial Performance
+financeiro.titulo=Financial Performance
+financeiro.receita=Revenue:
+financeiro.lucro=Profit:
+financeiro.crescimento=Growth:
+financeiro.editar=Edit
+financeiro.deletar=Delete
+financeiro.criar_novo=Create New Financial Performance
 
-historico.contrato=Contract Signed:
+historico.contrato=Signed Contract:
 historico.proposta=Business Proposal:
 historico.feedback=Feedback on Services/Products:
 historico.editar=Edit
 historico.deletar=Delete
-historico.criar_novo=Create Interaction History
+historico.criar_novo=Create New Interaction History
 
-comportamento.titulo=Business Behavior
-comportamento.interacoes=Platform Interactions:
-comportamento.frequencia=Usage Frequency:
-comportamento.feedback=Feedback:
-comportamento.uso_recursos=Use of Specific Resources:
-comportamento.editar=Edit
-comportamento.deletar=Delete
-comportamento.criar_novo=Create Business Behavior
+negocios.titulo=Business Behavior
+negocios.interacoes=Platform Interactions:
+negocios.frequencia=Frequency of Use:
+negocios.feedback=Feedback:
+negocios.uso_recursos=Use of Specific Resources:
+negocios.editar=Edit
+negocios.deletar=Delete
+negocios.criar_novo=Create New Business Behavior
 
-button.voltar=Back to list
+button.voltar=Back to the list
