atualizando a internacionalização de todas as classes

--- a/src/main/resources/mensagens_en.properties
+++ b/src/main/resources/mensagens_en.properties
@@ -10,6 +10,7 @@ empresa.numFun.positive=The number of employees must be greater than or equal to
 empresa.numFun.notEmpty=The number of employees is required
 //criar_empresa.html=
 empresa.title=Register New Company
+empresa.title.editar=Edit Company
 empresa.nome=What is the company name?
 empresa.tamanho=What is the company's size?
 empresa.setor=What is the company's industry?
