--- a/src/main/resources/mensagens_en.properties
+++ b/src/main/resources/mensagens_en.properties
@@ -1,33 +1,36 @@
 //Padrao=
 botao.salvar=Save
-botao.cancelar=Cancel
+
+//Usuario_model=
+usuario.nome.notEmpty=Name is required
+usuario.username.notEmpty=Username is required
 
 //Empresa_model=
 empresa.nome.size=The name must be between 4 and 255 characters
 empresa.nome.notEmpty=The company name is required
-empresa.loc.notEmpty=The geographic location is required
+empresa.loc.notEmpty=Geographical location is required
 empresa.numFun.positive=The number of employees must be greater than or equal to zero
 empresa.numFun.notEmpty=The number of employees is required
 //criar_empresa.html=
 empresa.title=Register New Company
 empresa.title.editar=Edit Company
 empresa.nome=What is the company name?
-empresa.tamanho=What is the company's size?
-empresa.setor=What is the company's industry?
+empresa.tamanho=What is the company size?
+empresa.setor=What is the business sector?
 empresa.localizacaoGeografica=Where is the company located?
 empresa.numeroFuncionarios=How many employees does the company have?
-empresa.tipoEmpresa=What is the company's type?
-empresa.cliente=Is this company our client?
+empresa.tipoEmpresa=What is the company type?
+empresa.cliente=Is this company a client of ours?
 tamanho.micro=Micro
 tamanho.pequeno=Small
 tamanho.medio=Medium
 tamanho.grande=Large
 tamanho.multinacional=Multinational
 tipo.empresa.sociedade_limitada=Limited Liability Company
-tipo.empresa.microempreendedor_individual=Sole Proprietorship
+tipo.empresa.microempreendedor_individual=Individual Microentrepreneur
 tipo.empresa.sociedade_limitada_unipessoal=Single-Member Limited Liability Company
 tipo.empresa.sociedade_anonima=Corporation
-tipo.empresa.empresario_individual=Sole Trader
+tipo.empresa.empresario_individual=Individual Entrepreneur
 tipo.empresa.sociedade_simples=Simple Partnership
 setor.comercial=Commercial
 setor.industrial=Industrial
@@ -36,16 +39,16 @@ setor.servicos=Services
 setor.outros=Others
 
 //Comportamento_model=
-comportamento.interacoes.notNull=The number of interactions on the platform is required
-comportamento.interacoes.positive=The number of interactions on the platform must be greater than or equal to zero
-comportamento.frequencia.min=The frequency of use must be zero or positive
-comportamento.frequencia.max=The frequency of use must be less than or equal to 10
-comportamento.frequencia.notNull=The frequency of use is required
+comportamento.interacoes.notNull=The number of platform interactions is required
+comportamento.interacoes.positive=The number of platform interactions must be greater than or equal to zero
+comportamento.frequencia.min=Usage frequency must be zero or higher
+comportamento.frequencia.max=Usage frequency must be less than or equal to 10
+comportamento.frequencia.notNull=Usage frequency is required
 comportamento.feedback.notBlank=Feedback is required
 //criar_comportamento.html=
 comportamento.titulo=Business Behavior
-comportamento.interacoesPlataforma=How many interactions has the company had on the platform?
-comportamento.frequenciaUso=What is the frequency of platform use? (On a scale of 1 to 10)
+comportamento.interacoesPlataforma=How many interactions did the company have on the platform?
+comportamento.frequenciaUso=What is the platform usage frequency? (On a scale of 1 to 10)
 comportamento.feedback=Comments and opinions about the platform
 comportamento.usoRecursos=Do you use any specific resource?
 comportamento.selecioneOpcao=Select an option
@@ -70,33 +73,35 @@ desempenho.crescimento=What was the growth percentage?
 historico.proposta.notBlank=The business proposal is required
 historico.feedback.notBlank=Feedback is required
 //criar_historico.html=
-historico.titulo=Interaction History
-historico.proposta_negocio=What is the business proposal?
-historico.contrato_assinado=Signed Contract:
-historico.selecione_opcao=Select an option
+historico.titulo = Interaction History
+historico.proposta_negocio = What is the business proposal?
+historico.contrato_assinado = Signed Contract:
+historico.selecione_opcao = Select an option
 opcoesContrato.sim=Yes
 opcoesContrato.nao=No
-historico.feedback_servicos_produtos=Opinion on Services and Products
+historico.feedback_servicos_produtos = Opinion about Services and Products
 
 //Tendencia_model=
-tendencia.ano.min=The year must be greater than or equal to 1900
-tendencia.ano.max=The year must be less than or equal to 2025
-tendencia.ano.notNull=The year is required
-tendencia.gastoMarketing.positive=Marketing spending must be greater than or equal to zero
-tendencia.gastoMarketing.notNull=Marketing spending is required
-tendencia.gastoAutomacao.positive=Automation spending must be greater than or equal to zero
-tendencia.gastoAutomacao.notNull=Automation spending is required
+tendencia.ano.min=Year must be greater than or equal to 1900
+tendencia.ano.max=Year must be less than or equal to 2025
+tendencia.ano.notNull=Year is required
+tendencia.gastoMarketing.positive=Marketing expense must be greater than or equal to zero
+tendencia.gastoMarketing.notNull=Marketing expense is required
+tendencia.gastoAutomacao.positive=Automation expense must be greater than or equal to zero
+tendencia.gastoAutomacao.notNull=Automation expense is required
 //criar_tendencia.html=
-tendencia.titulo=Spending Trend
-tendencia.gastoMarketing=Marketing Spending:
-tendencia.gastoAutomacao=Automation Spending:
+tendencia.titulo=Expense Trend
+tendencia.gastoMarketing=Marketing Expense:
+tendencia.gastoAutomacao=Automation Expense:
 tendencia.ano=Year:
+
 
 //index.html=
 index.title=Our Partner Companies
 index.navbar=HyperReach
 index.home=Home
-index.register=Register
+index.register=Register Company
+index.register2=Register User
 index.table.name=Name
 index.table.size=Size
 index.table.sector=Sector
@@ -108,6 +113,8 @@ index.table.actions=Actions
 index.details=Details
 index.edit=Edit
 index.remove=Remove
+teste=Are you sure you want to delete this company?
+
 
 //Detalhes_Empresa=
 details.title=Company Details
@@ -118,39 +125,41 @@ general_info.setor=Sector:
 general_info.localizacao=Location:
 general_info.num_funcionarios=Number of Employees:
 general_info.tipo_empresa=Company Type:
-general_info.cliente=Client:
 
-gastos.titulo=Spending Trends
-gasto.ano=Year 2024
+gastos.titulo=Expense Trends
 gastos.ano=Year:
-gastos.marketing=Marketing Spending:
-gastos.automacao=Automation Spending:
+gastos.marketing=Marketing Expense:
+gastos.automacao=Automation Expense:
 gastos.editar=Edit
-gastos.deletar=Delete
-gastos.criar_nova=Create New Spending Trend
+gastos.criar_nova=Create Expense Trend
 
 financeiro.titulo=Financial Performance
 financeiro.receita=Revenue:
 financeiro.lucro=Profit:
 financeiro.crescimento=Growth:
 financeiro.editar=Edit
-financeiro.deletar=Delete
-financeiro.criar_novo=Create New Financial Performance
+financeiro.criar_novo=Create Financial Performance
 
 historico.contrato=Signed Contract:
 historico.proposta=Business Proposal:
-historico.feedback=Feedback on Services/Products:
+historico.feedback=Feedback:
 historico.editar=Edit
-historico.deletar=Delete
-historico.criar_novo=Create New Interaction History
+historico.criar_novo=Create Interaction History
 
 negocios.titulo=Business Behavior
 negocios.interacoes=Platform Interactions:
-negocios.frequencia=Frequency of Use:
+negocios.frequencia=Usage Frequency:
 negocios.feedback=Feedback:
 negocios.uso_recursos=Use of Specific Resources:
 negocios.editar=Edit
-negocios.deletar=Delete
-negocios.criar_novo=Create New Business Behavior
+negocios.criar_novo=Create Business Behavior
 
 button.voltar=Back to the list
+
+usuario.cadastro.titulo=User Registration
+usuario.nome=Name
+usuario.username=Username
+usuario.senha=Password
+usuario.permissoes=Permissions
+botao.cadastrar=Register
+botao.cancelar=Cancel
